SConfigure webpack and set up basic hello world

--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>HISTORY</title>
+  <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
+</head>
 
+<body>
+  <div id="container">
+  </div>
+  <script src='app.js'></script>
+</body>
+
+</html>
