Install dependencies and configure basic hello, world

--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <title>BITCOIN</title>
+</head>
 
+<body>
+  <div id="container">
+  </div>
+  <script src='app.js'></script>
+</body>
+
+</html>
